// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-homepage no categories should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: Home
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/docusaurus#readme) if you want to use it.

<a href=\\"https://www.netlify.com\\">
  <img src=\\"https://www.netlify.com/img/global/badges/netlify-light.svg\\" alt=\\"Deploys by Netlify\\" width=\\"114\\" height=\\"51\\" />
</a>
"
`;

exports[`write-homepage one category, no page should write a docs/readme.md file using the home template 1`] = `
"---
id: index
title: Home
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## Category

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/docusaurus#readme) if you want to use it.

<a href=\\"https://www.netlify.com\\">
  <img src=\\"https://www.netlify.com/img/global/badges/netlify-light.svg\\" alt=\\"Deploys by Netlify\\" width=\\"114\\" height=\\"51\\" />
</a>
"
`;

exports[`write-homepage one category, one page should write a docs/readme.md file using the home template 1`] = `
"---
id: index
title: Home
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/docusaurus#readme) if you want to use it.

<a href=\\"https://www.netlify.com\\">
  <img src=\\"https://www.netlify.com/img/global/badges/netlify-light.svg\\" alt=\\"Deploys by Netlify\\" width=\\"114\\" height=\\"51\\" />
</a>
"
`;

exports[`write-homepage one category, two pages should write a docs/readme.md file using the home template 1`] = `
"---
id: index
title: Home
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## Category
- [Page 1](category/page1)
- [Page 2](category/page2)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/docusaurus#readme) if you want to use it.

<a href=\\"https://www.netlify.com\\">
  <img src=\\"https://www.netlify.com/img/global/badges/netlify-light.svg\\" alt=\\"Deploys by Netlify\\" width=\\"114\\" height=\\"51\\" />
</a>
"
`;

exports[`write-homepage two categories, one page in each should write a docs/readme.md file using the home template 1`] = `
"---
id: index
title: Home
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## Category 1
- [Page](category1/page)

## Category 2
- [Page](category2/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/docusaurus#readme) if you want to use it.

<a href=\\"https://www.netlify.com\\">
  <img src=\\"https://www.netlify.com/img/global/badges/netlify-light.svg\\" alt=\\"Deploys by Netlify\\" width=\\"114\\" height=\\"51\\" />
</a>
"
`;
